fixed bug where words weren't wrapping inside tweets

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -130,6 +130,7 @@ form {
   margin-bottom: 25px;
   border-radius: 25px;
   border-color: lightskyblue;
+  word-wrap: break-word;
 }
 
 span.spanright {
